add_executable(mesg_test1 test1.C)
target_link_libraries(mesg_test1 libsawyer)

add_executable(mesg_test4 test4.C)
target_link_libraries(mesg_test4 libsawyer)

add_executable(mesg_test5 test5.C)
target_link_libraries(mesg_test5 libsawyer)

add_executable(mesg_test6 test6.C)
target_link_libraries(mesg_test6 libsawyer)

add_executable(mesg_test7 test7.C)
target_link_libraries(mesg_test7 libsawyer)

add_executable(mesg_test8 test8.C)
target_link_libraries(mesg_test8 libsawyer)
